setting swagger documentation to user routes
